k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: vault
spec:
  selector:
    app: vault
  ports:
    - port: 80
      targetPort: 7860
  type: ClusterIP
